# secura

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  secura.db
.github/workflows/: desktop-and-mobile-build.yml  web-build.yaml
src/: appbar.py  db.py  main.py  router.py
src/crypto/: aes_view.py  base_view.py  dh_view.py  hash_view.py  home.py  keys_view.py  rsa_view.py  sign_view.py  suite_view.py
src/ui/: components.py  crypto_encrypt_decrypt.py  crypto_keys.py  crypto_rsa.py  crypto_sign_verify.py  crypto_suite.py  home.py  home_page.py  theme.py
